{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 107,
  "lineage": "39bd3fb7-a2cb-1d93-038c-2cf4f1385700",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "m4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f785fbcf959127c",
            "arn": "arn:aws:ec2:us-west-2:640107381732:elastic-ip/eipalloc-07f785fbcf959127c",
            "domain": "vpc",
            "id": "eipalloc-07f785fbcf959127c",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-245-119-17.us-west-2.compute.amazonaws.com",
            "public_ip": "44.245.119.17",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "m1_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b808727fd5370c96",
            "arn": "arn:aws:ec2:ap-northeast-2:640107381732:instance/i-0d4d73d080a24f348",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "skills-nosql-ec2-profile",
            "id": "i-0d4d73d080a24f348",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-082f5f115973e40bc",
            "private_dns": "ip-10-1-1-62.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.62",
            "public_dns": "ec2-54-180-248-58.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.248.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c9c79ce4c9c18d27",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a1b65b5ff211cc47",
            "tags": {
              "Name": "skills-nosql-client-ec2"
            },
            "tags_all": {
              "Name": "skills-nosql-client-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01c708879e76297a1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.m1",
            "aws_iam_role.m1_ec2",
            "aws_security_group.m1_ec2",
            "aws_subnet.m1_public",
            "aws_vpc.m1",
            "data.aws_ami.al2023_seoul",
            "data.aws_availability_zones.seoul"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "m2_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-047a6c245bf4553f6",
            "arn": "arn:aws:ec2:ap-northeast-1:640107381732:instance/i-0cfb21a7356c56b9e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "skills-lattice-client-profile",
            "id": "i-0cfb21a7356c56b9e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-002a4b7f80bcd1fcc",
            "private_dns": "ip-10-61-1-125.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.61.1.125",
            "public_dns": "ec2-13-231-214-195.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.231.214.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08deacfde36314553",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03435532fc4f68ec4",
            "tags": {
              "Name": "skills-lattice-client-ec2"
            },
            "tags_all": {
              "Name": "skills-lattice-client-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09434e89f403f6e84"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.m2_client",
            "aws_iam_role.m2_client",
            "aws_security_group.m2_client",
            "aws_subnet.m2_client",
            "aws_vpc.m2_client",
            "data.aws_ami.al2023_tokyo",
            "data.aws_availability_zones.tokyo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "m2_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-047a6c245bf4553f6",
            "arn": "arn:aws:ec2:ap-northeast-1:640107381732:instance/i-055e386734b831ac6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-055e386734b831ac6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cfa22ed9d75e6789",
            "private_dns": "ip-10-62-1-216.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.62.1.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c1bf0ec05f1369d7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06dcb0c61a13c4ba7",
            "tags": {
              "Name": "skills-lattice-service-ec2"
            },
            "tags_all": {
              "Name": "skills-lattice-service-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0027545cbbeb4125a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.m2_service",
            "aws_subnet.m2_service",
            "aws_vpc.m2_service",
            "data.aws_ami.al2023_tokyo",
            "data.aws_availability_zones.tokyo",
            "data.aws_ec2_managed_prefix_list.lattice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "m3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].singapore",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03dbc171f7aa53551",
            "arn": "arn:aws:ec2:ap-southeast-1:640107381732:instance/i-0bf18e776f4e3771a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bf18e776f4e3771a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-062787f1fee0c01af",
            "private_dns": "ip-10-73-1-39.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.73.1.39",
            "public_dns": "ec2-54-254-128-44.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.254.128.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-082541c9ddb85b040",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07cc23a2df13f89ea",
            "tags": {
              "Name": "skills-ceh-ec2"
            },
            "tags_all": {
              "Name": "skills-ceh-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c93b43f99f927451"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.m3_protected",
            "aws_subnet.m3",
            "aws_vpc.m3",
            "data.aws_ami.al2023_sg",
            "data.aws_availability_zones.sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "m1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:640107381732:internet-gateway/igw-0b9264d648fa5b006",
            "id": "igw-0b9264d648fa5b006",
            "owner_id": "640107381732",
            "vpc_id": "vpc-0fe27a3e6f88f4c8d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.m1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "m2_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:640107381732:internet-gateway/igw-03ebe5cb8c4b704b0",
            "id": "igw-03ebe5cb8c4b704b0",
            "owner_id": "640107381732",
            "vpc_id": "vpc-0a26140efe1f3ba24"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.m2_client"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "m2_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:640107381732:internet-gateway/igw-071517ca181ed4e1a",
            "id": "igw-071517ca181ed4e1a",
            "owner_id": "640107381732",
            "vpc_id": "vpc-017d9d8fe20c92231"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.m2_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "m3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].singapore",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:640107381732:internet-gateway/igw-0da5d330d2ff2700d",
            "id": "igw-0da5d330d2ff2700d",
            "owner_id": "640107381732",
            "vpc_id": "vpc-0757fe9c3b1634425"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.m3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "m4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:640107381732:internet-gateway/igw-0c0e8e99437c7cf76",
            "id": "igw-0c0e8e99437c7cf76",
            "owner_id": "640107381732",
            "vpc_id": "vpc-05bea5e00d714670d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.m4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "m4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07f785fbcf959127c",
            "association_id": "eipassoc-06c4c95ed442d489d",
            "connectivity_type": "public",
            "id": "nat-0abec64aebfac9f1b",
            "network_interface_id": "eni-0be6c3b4b9f3155e5",
            "private_ip": "10.4.0.13",
            "public_ip": "44.245.119.17",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fc2e6dae7dae9020"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.m4",
            "aws_internet_gateway.m4",
            "aws_subnet.m4_public",
            "aws_vpc.m4",
            "data.aws_availability_zones.oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "m1_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:640107381732:route-table/rtb-0ea1d78401f839ad4",
            "id": "rtb-0ea1d78401f839ad4",
            "owner_id": "640107381732",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b9264d648fa5b006",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fe27a3e6f88f4c8d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.m1",
            "aws_vpc.m1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "m2_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:640107381732:route-table/rtb-0de3755a34f447f1d",
            "id": "rtb-0de3755a34f447f1d",
            "owner_id": "640107381732",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03ebe5cb8c4b704b0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a26140efe1f3ba24"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.m2_client",
            "aws_vpc.m2_client"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "m2_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:640107381732:route-table/rtb-0d2f93dd2ed7618c3",
            "id": "rtb-0d2f93dd2ed7618c3",
            "owner_id": "640107381732",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-071517ca181ed4e1a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-017d9d8fe20c92231"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.m2_service",
            "aws_vpc.m2_service"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "m3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].singapore",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:640107381732:route-table/rtb-03bb337b546c90b4a",
            "id": "rtb-03bb337b546c90b4a",
            "owner_id": "640107381732",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0da5d330d2ff2700d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0757fe9c3b1634425"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.m3",
            "aws_vpc.m3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "m4_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:640107381732:route-table/rtb-02558cb17d1be3bf1",
            "id": "rtb-02558cb17d1be3bf1",
            "owner_id": "640107381732",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0abec64aebfac9f1b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05bea5e00d714670d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.m4",
            "aws_internet_gateway.m4",
            "aws_nat_gateway.m4",
            "aws_subnet.m4_public",
            "aws_vpc.m4",
            "data.aws_availability_zones.oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "m4_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:640107381732:route-table/rtb-0647c64212ed2d42f",
            "id": "rtb-0647c64212ed2d42f",
            "owner_id": "640107381732",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c0e8e99437c7cf76",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05bea5e00d714670d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.m4",
            "aws_vpc.m4"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "m1_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0930c87206b1c2600",
            "route_table_id": "rtb-0ea1d78401f839ad4",
            "subnet_id": "subnet-0a1b65b5ff211cc47"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.m1",
            "aws_route_table.m1_public",
            "aws_subnet.m1_public",
            "aws_vpc.m1",
            "data.aws_availability_zones.seoul"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "m2_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b61bed315e138f28",
            "route_table_id": "rtb-0de3755a34f447f1d",
            "subnet_id": "subnet-03435532fc4f68ec4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.m2_client",
            "aws_route_table.m2_client",
            "aws_subnet.m2_client",
            "aws_vpc.m2_client",
            "data.aws_availability_zones.tokyo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "m2_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc202d482f626931",
            "route_table_id": "rtb-0d2f93dd2ed7618c3",
            "subnet_id": "subnet-06dcb0c61a13c4ba7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.m2_service",
            "aws_route_table.m2_service",
            "aws_subnet.m2_service",
            "aws_vpc.m2_service",
            "data.aws_availability_zones.tokyo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "m2_service_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a728053520c30e6",
            "route_table_id": "rtb-0d2f93dd2ed7618c3",
            "subnet_id": "subnet-01d9bbbd3a460dbea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.m2_service",
            "aws_route_table.m2_service",
            "aws_subnet.m2_service_public",
            "aws_vpc.m2_service",
            "data.aws_availability_zones.tokyo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "m3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].singapore",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050ab58279ba2bb53",
            "route_table_id": "rtb-03bb337b546c90b4a",
            "subnet_id": "subnet-07cc23a2df13f89ea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.m3",
            "aws_route_table.m3",
            "aws_subnet.m3",
            "aws_vpc.m3",
            "data.aws_availability_zones.sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "m4_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d548c2257104b3c",
            "route_table_id": "rtb-02558cb17d1be3bf1",
            "subnet_id": "subnet-087e2017f0846f0d3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.m4",
            "aws_internet_gateway.m4",
            "aws_nat_gateway.m4",
            "aws_route_table.m4_private",
            "aws_subnet.m4_private",
            "aws_subnet.m4_public",
            "aws_vpc.m4",
            "data.aws_availability_zones.oregon"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e5a3a1e27beeedd",
            "route_table_id": "rtb-02558cb17d1be3bf1",
            "subnet_id": "subnet-0cc1c825ccce48d49"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.m4",
            "aws_internet_gateway.m4",
            "aws_nat_gateway.m4",
            "aws_route_table.m4_private",
            "aws_subnet.m4_private",
            "aws_subnet.m4_public",
            "aws_vpc.m4",
            "data.aws_availability_zones.oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "m4_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3713bfd2e565722",
            "route_table_id": "rtb-0647c64212ed2d42f",
            "subnet_id": "subnet-0fc2e6dae7dae9020"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.m4",
            "aws_route_table.m4_public",
            "aws_subnet.m4_public",
            "aws_vpc.m4",
            "data.aws_availability_zones.oregon"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e0bf2a070ceee57",
            "route_table_id": "rtb-0647c64212ed2d42f",
            "subnet_id": "subnet-0e5071591c3cc7eb9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.m4",
            "aws_route_table.m4_public",
            "aws_subnet.m4_public",
            "aws_vpc.m4",
            "data.aws_availability_zones.oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "m1_docdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:640107381732:security-group/sg-0e3e02c7ba5348297",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3e02c7ba5348297",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01c708879e76297a1"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "terraform-20260611021706433000000004",
            "name_prefix": "terraform-",
            "owner_id": "640107381732",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fe27a3e6f88f4c8d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.m1_ec2",
            "aws_vpc.m1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "m1_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:640107381732:security-group/sg-01c708879e76297a1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c708879e76297a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20260611021704718400000002",
            "name_prefix": "terraform-",
            "owner_id": "640107381732",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fe27a3e6f88f4c8d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.m1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "m2_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:640107381732:security-group/sg-09434e89f403f6e84",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09434e89f403f6e84",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20260611021706385300000005",
            "name_prefix": "terraform-",
            "owner_id": "640107381732",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a26140efe1f3ba24"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.m2_client"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "m2_lattice_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:640107381732:security-group/sg-09c7cc159cd76a89d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c7cc159cd76a89d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.61.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20260611021706260100000004",
            "name_prefix": "terraform-",
            "owner_id": "640107381732",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a26140efe1f3ba24"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.m2_client"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "m2_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:640107381732:security-group/sg-0027545cbbeb4125a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0027545cbbeb4125a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [
                  "pl-0596057d86614af83"
                ],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-20260611021706715200000006",
            "name_prefix": "terraform-",
            "owner_id": "640107381732",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-017d9d8fe20c92231"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.m2_service",
            "data.aws_ec2_managed_prefix_list.lattice"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "m3_protected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].singapore",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:640107381732:security-group/sg-0c93b43f99f927451",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c93b43f99f927451",
            "ingress": [],
            "name": "skills-ceh-protected-sg",
            "name_prefix": "",
            "owner_id": "640107381732",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "skills-ceh-protected-sg"
            },
            "tags_all": {
              "Name": "skills-ceh-protected-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0757fe9c3b1634425"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.m3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "m1_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:640107381732:subnet/subnet-001d4b7e3eb79a42b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001d4b7e3eb79a42b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "640107381732",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0fe27a3e6f88f4c8d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.m1",
            "data.aws_availability_zones.seoul"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:640107381732:subnet/subnet-091fd33b4b9b4c5ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.1.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091fd33b4b9b4c5ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "640107381732",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0fe27a3e6f88f4c8d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.m1",
            "data.aws_availability_zones.seoul"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "m1_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:640107381732:subnet/subnet-0a1b65b5ff211cc47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1b65b5ff211cc47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "640107381732",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0fe27a3e6f88f4c8d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.m1",
            "data.aws_availability_zones.seoul"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "m2_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:640107381732:subnet/subnet-03435532fc4f68ec4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.61.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03435532fc4f68ec4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "640107381732",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a26140efe1f3ba24"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.m2_client",
            "data.aws_availability_zones.tokyo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "m2_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:640107381732:subnet/subnet-06dcb0c61a13c4ba7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.62.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06dcb0c61a13c4ba7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "640107381732",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-017d9d8fe20c92231"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.m2_service",
            "data.aws_availability_zones.tokyo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "m2_service_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:640107381732:subnet/subnet-01d9bbbd3a460dbea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.62.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d9bbbd3a460dbea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "640107381732",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-017d9d8fe20c92231"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.m2_service",
            "data.aws_availability_zones.tokyo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "m3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].singapore",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:640107381732:subnet/subnet-07cc23a2df13f89ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.73.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07cc23a2df13f89ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "640107381732",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0757fe9c3b1634425"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.m3",
            "data.aws_availability_zones.sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "m4_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:640107381732:subnet/subnet-087e2017f0846f0d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.4.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087e2017f0846f0d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "640107381732",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05bea5e00d714670d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.m4",
            "data.aws_availability_zones.oregon"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:640107381732:subnet/subnet-0cc1c825ccce48d49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.4.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc1c825ccce48d49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "640107381732",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05bea5e00d714670d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.m4",
            "data.aws_availability_zones.oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "m4_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:640107381732:subnet/subnet-0fc2e6dae7dae9020",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.4.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc2e6dae7dae9020",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "640107381732",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05bea5e00d714670d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.m4",
            "data.aws_availability_zones.oregon"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:640107381732:subnet/subnet-0e5071591c3cc7eb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.4.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5071591c3cc7eb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "640107381732",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05bea5e00d714670d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.m4",
            "data.aws_availability_zones.oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "m1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].seoul",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:640107381732:vpc/vpc-0fe27a3e6f88f4c8d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0f484c242f9e5bf14",
            "default_route_table_id": "rtb-081bfeeb557f528ac",
            "default_security_group_id": "sg-062e3b5b297fcd959",
            "dhcp_options_id": "dopt-061f3b845fb00ae1d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fe27a3e6f88f4c8d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-081bfeeb557f528ac",
            "owner_id": "640107381732"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "m2_client",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:640107381732:vpc/vpc-0a26140efe1f3ba24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.61.0.0/16",
            "default_network_acl_id": "acl-03745af55f3823d4f",
            "default_route_table_id": "rtb-06aa45fdc77264373",
            "default_security_group_id": "sg-065b2cc4182a02ec5",
            "dhcp_options_id": "dopt-0d05953171673649d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a26140efe1f3ba24",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06aa45fdc77264373",
            "owner_id": "640107381732",
            "tags": {
              "Name": "skills-lattice-client-vpc"
            },
            "tags_all": {
              "Name": "skills-lattice-client-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "m2_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].tokyo",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:640107381732:vpc/vpc-017d9d8fe20c92231",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.62.0.0/16",
            "default_network_acl_id": "acl-07b2c3e91f546090c",
            "default_route_table_id": "rtb-04b3c0af766c19e0a",
            "default_security_group_id": "sg-02c03886337d01af0",
            "dhcp_options_id": "dopt-0d05953171673649d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-017d9d8fe20c92231",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04b3c0af766c19e0a",
            "owner_id": "640107381732",
            "tags": {
              "Name": "skills-lattice-service-vpc"
            },
            "tags_all": {
              "Name": "skills-lattice-service-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "m3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].singapore",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:640107381732:vpc/vpc-0757fe9c3b1634425",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.73.0.0/16",
            "default_network_acl_id": "acl-024203688dfeb8991",
            "default_route_table_id": "rtb-0f4eeb8284bc63453",
            "default_security_group_id": "sg-04edc5a51b57b03d0",
            "dhcp_options_id": "dopt-08ed7e16895d17446",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0757fe9c3b1634425",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f4eeb8284bc63453",
            "owner_id": "640107381732",
            "tags": {
              "Name": "skills-ceh-vpc"
            },
            "tags_all": {
              "Name": "skills-ceh-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "m4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:640107381732:vpc/vpc-05bea5e00d714670d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.4.0.0/16",
            "default_network_acl_id": "acl-02125843e7e0c0613",
            "default_route_table_id": "rtb-08a13b251f57d97d2",
            "default_security_group_id": "sg-08388a71661934588",
            "dhcp_options_id": "dopt-0069db7b0960406d4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05bea5e00d714670d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08a13b251f57d97d2",
            "owner_id": "640107381732"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}